--- a/css/animation.css
+++ b/css/animation.css
@@ -1,64 +1,3 @@
- .order-Grid {
-   display: flex;
-   align-items: center;
- }
-
- .grid-container h3 {
-   color: #fff;
- }
-
- .grid-item1 {
-   background: #3D9FE0;
-   text-align: center;
-   align-self: center;
-   border: rgb(255, 255, 255) 2px solid;
-   padding: 0.4rem;
-   border-radius: 5px;
-   box-shadow: -7px 6px 22px -8px rgba(0, 0, 0, 0.5);
- }
-
- .grid-item {
-   background: rgb(215, 210, 210);
-   text-align: center;
-   align-self: center;
-   border: rgb(255, 255, 255) 1px solid;
-   padding: 0.4rem;
-   border-radius: 5px;
-   box-shadow: -7px 6px 22px -8px rgba(0, 0, 0, 0.5);
- }
-
- .rowone {
-   background: rgb(244, 240, 240);
- }
-
- .grid-container2 {
-   display: grid;
-   grid-template-rows: 2.5rem 2.5rem;   
-   grid-gap: 8px;
- }
- .grid-item2 {
-  background: rgb(244, 240, 240);
-  text-align: center;
-  align-self: center;
-  border: rgb(253, 253, 253) 2px solid;
-  box-shadow: -7px 6px 22px -8px rgba(0, 0, 0, 0.5);
-}
-
- .grid-item3 {
-   background: rgb(244, 240, 240);
-   text-align: left;
-   align-self: center;
-   border: rgb(255, 255, 255) 1px solid;
-   padding: 0.6rem;
-   border-radius: 5px;
-   box-shadow: -7px 6px 22px -8px rgba(0, 0, 0, 0.5);
- }
-
- .grid-ubi {
-   display: flex;
-   align-items: center;
- }
-
  .slide-contenedor {
    max-width: 100%;
    max-height: 400px;
@@ -70,10 +9,7 @@
    box-shadow: -7px 10px 22px -8px rgba(0, 0, 0, 0.9);
    margin: 1.5rem 0rem;
  }
-/* AJUSTANDO IMAGEN */
 
-
-/* --------------- */
  .direcciones {
    width: 100%;
    height: 100%;
@@ -86,7 +22,7 @@
  }
 
  .direcciones a {
-  /* background-color: rgba(0, 0, 0, .1); */
+   /* background-color: rgba(0, 0, 0, .1); */
    color: rgb(255, 255, 255);
    display: inline-block;
    padding: 20px;
@@ -112,13 +48,15 @@
    height: 2px;
    width: 25px;
    margin: 0 2px;
-   background: rgba(162, 162, 162, 0.5);;
+   background: rgba(162, 162, 162, 0.5);
+   ;
    display: inline-block;
    margin-left: 3px;
  }
- .miSlider{
-  transition: opacity 0.5s ease-in-out;
-}
+
+ .miSlider {
+   transition: opacity 0.5s ease-in-out;
+ }
 
  .active {
    background-color: #c2236e;
@@ -128,16 +66,25 @@
    animation-name: fade;
    animation-duration: 4.5s;
  }
+
  @keyframes fade {
    0% {
-     opacity: .8;    
-   }20% {
+     opacity: .8;
+   }
+
+   20% {
      opacity: .9;
-   }50% {
-    opacity: 1;
-  }75% {
-    opacity: 1;
-  }100% {
-    opacity: 1;
-  }
+   }
+
+   50% {
+     opacity: 1;
+   }
+
+   75% {
+     opacity: 1;
+   }
+
+   100% {
+     opacity: 1;
+   }
  }
